--- a/BulkyBook/Views/Category/Index.cshtml
+++ b/BulkyBook/Views/Category/Index.cshtml
@@ -1,2 +1,36 @@
-﻿@model TModel
+﻿@using Microsoft.CodeAnalysis.CSharp
+@model IEnumerable<Category>
+@{
+    ViewData["Title"] = "Index";
 
+}
+
+<h1>Index of Category</h1>
+
+<table class="table table-bordered table-striped" style="width:100%">
+    <thead>
+    <tr>
+        <th>
+            Category Name
+        </th>
+        <th>
+            Display Order
+        </th>
+    </tr>
+
+    </thead>
+    <tbody>
+    @foreach (var obj in Model)
+    {
+        <tr>
+            <td width:50%>
+                @obj.Name
+            </td>
+            <td width:50%>
+                @obj.DisplayOrder
+            </td>
+        </tr>
+    }
+
+    </tbody>
+</table>
