--- a/BulkyBook/Views/Category/Index.cshtml
+++ b/BulkyBook/Views/Category/Index.cshtml
@@ -4,8 +4,18 @@
     ViewData["Title"] = "Index";
 
 }
-
-<h1>Index of Category</h1>
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="colo-6">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+        <div class="colo-6 text-end">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-patch-plus-fill"></i> &nbsp; Create New Category
+            </a>
+        </div>
+    </div>
+</div>
 
 <table class="table table-bordered table-striped" style="width:100%">
     <thead>
