--- a/BulkyBook/Views/Category/Index.cshtml
+++ b/BulkyBook/Views/Category/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.CodeAnalysis.CSharp
-@model IEnumerable<Category>
+﻿@model IEnumerable<Category>
 @{
     ViewData["Title"] = "Index";
 
