--- a/BulkyBook/Views/Home/Privacy.cshtml
+++ b/BulkyBook/Views/Home/Privacy.cshtml
@@ -3,4 +3,36 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h1 id="contents">Contents</h1>
+
+<ul>
+    <li><a href="">Personal info</a>
+        <ul><li><a href="">Children</a></li></ul>
+    </li>
+     
+    <li><a href="">Collection</a>
+        <ul><li><a href="">Tracking technologies</a></li></ul>
+    </li>
+      
+    <li><a href="">Use</a>
+    </li>
+    
+    <li><a href="">Disclosure</a>
+        <ul>
+            <li><a href="">Partners</a></li>
+            <li><a href="">Legal process</a></li>
+        </ul></li>
+      
+    <li><a href="">Storage</a>
+        <ul>
+            <li><a href="">Where your info lives</a></li>
+            <li><a href="">How long we keep your info</a></li>
+        </ul></li>
+      
+    <li><a href="">About</a>
+        <ul><li><a href="">Your choices</a></li>
+            <li><a href="">Changes to this policy</a></li>
+            <li><a href="">Contact us</a></li>
+        </ul></li>
+      
+</ul>
