--- a/BulkyBook/Views/Category/Index.cshtml
+++ b/BulkyBook/Views/Category/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@model IEnumerable<Category>
 @{
     ViewData["Title"] = "Index";
-
 }
 <div class="container p-3">
     <div class="row pt-4">
@@ -25,6 +24,7 @@
         <th>
             Display Order
         </th>
+        <th></th>
     </tr>
 
     </thead>
@@ -35,8 +35,14 @@
             <td width:50%>
                 @obj.Name
             </td>
-            <td width:50%>
+            <td width:30%>
                 @obj.DisplayOrder
+            </td>
+            <td>
+                <div class="w-75 btn-group" role="group">
+                    <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary"> <i class="bi bi-pencil-square"></i>Edit</a>
+                    <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger"> <i class="bi bi-trash3"></i>Delete</a>
+                </div>
             </td>
         </tr>
     }
