--- a/BulkyBook/Views/Shared/_Layout.cshtml
+++ b/BulkyBook/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - BulkyBook</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"/>
     <link rel="stylesheet" href="~/css/bootswatchTheme.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/BulkyBook.styles.css" asp-append-version="true"/>
 </head>
@@ -53,6 +54,8 @@
 </header>
 <div class="container">
     <main role="main" class="pb-3">
+        <partial name="_Notifications"/>
+
         @RenderBody()
     </main>
 </div>
